--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-    <h2>Qual a principal diferença ente um disco rígido e um disco SSD?</h2>
+    <h2>Qual a principal diferença entre um disco rígido e um disco SSD?</h2>
 
     <div id="opcoes">
         <div class="opcao" onclick="verificarResposta(this, false)">O disco rígido é mais rápido e dura mais que o SSD.</div>
